# init-args-serializer

./: LICENSE.txt  README.md  setup.cfg  setup.py
.github/: codecov.yml
.github/workflows/: run_tests.yml
init_args_serializer/: __init__.py  function_arg_capture.py  serializable.py
tests/: test_argcapture.py  test_serializable.py
