[metadata]
name = init-args-serializer
version = 1.1
description = Python serializer based on init-args
author = Felix Treede
author_email = felixtreede@yahoo.de
url = https://github.com/Xfel/init-args-serializer
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
keywords = serialization, serializer, init-args

[options]
zip_safe = True
packages = find:
python_requires = >=3.7, <4
install_requires = 


[options.extras_require]
test = pytest; pytest-cov
